# mvcrender

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pr-wheels.yml  wheels-and-publish.yml
src/mvcrender/autocrop/: __init__.py  _native.c  _native.pyi
src/mvcrender/blend/: __init__.py  _native.c  _native.pyi
src/mvcrender/draw/: __init__.py  _native.c  _native.pyi
src/mvcrender/material/: __init__.py  _native.c  _native.pyi  material.py
src/mvcrender/rooms/: __init__.py  _native.c  _native.pyi
tests/: smoke.py
