[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mvcrender"
version = "0.0.7"
description = "This is a cPython version of some functions used in Vsletudo Map Parser"
authors = [{name = "Sandro Cantarella", email = "gsca075@gmail.com"}]
requires-python = ">=3.13"
dependencies = ["numpy>=2.1"]
license = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/sca075/mvcrender"
Repository = "https://github.com/sca075/mvcrender"
Issues = "https://github.com/sca075/mvcrender/issues"
Changelog = "https://github.com/sca075/mvcrender/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
